--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Practico 1 PHP</title>
+    <title>A Pedido</title>
    
    
 </head>
 
 
-<form>
-    <input type="text" name="nombre">
-    <input type="text" name="apellido">
-    <input type="text" name="edad">
-    <input type="submit">
-</form>
